# personal-portfolio

./: .gitignore  CLAUDE.md
.claude/: settings.local.json
.specify/memory/: constitution.md
frontend/: .env.example  .gitignore  next.config.js  package-lock.json  package.json  tailwind.config.ts  vercel.json
frontend/src/app/: error.tsx  layout.tsx  loading.tsx  not-found.tsx  page.tsx  sitemap.ts
frontend/src/lib/: env.ts  mcp-client.ts
frontend/src/styles/: globals.css
history/prompts/001-ai-portfolio-system/: 0001-us3-ai-chatbot-implementation-phase-5.green.prompt.md  0002-us4-lead-capture-implementation-phase-6.green.prompt.md  0003-phase-7-polish-and-phase-8-deploy-config.green.prompt.md  0004-implementation-complete-manual-tasks-remaining.green.prompt.md  001-ai-portfolio-system-specification.spec.prompt.md  002-implementation-plan-creation.plan.prompt.md  003-task-list-generation.tasks.prompt.md  004-implementation-phase1-phase4.green.prompt.md
mcp-server/: .env.example  .gitignore  Dockerfile  pyproject.toml  render.yaml  requirements.txt
mcp-server/src/: config.py  main.py
mcp-server/src/agent/: __init__.py  agent.py  prompts.py  tools.py
mcp-server/src/data/: profile.json  projects.json  skills.json
mcp-server/src/models/: __init__.py  contact.py  profile.py  project.py  skill.py
mcp-server/src/resources/: __init__.py  profile.py  projects.py  skills.py
mcp-server/src/tools/: __init__.py  send_email.py  send_whatsapp.py
specs/001-ai-portfolio-system/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+26 files in other folders)
